--- a/employee/templates/employees/show.html
+++ b/employee/templates/employees/show.html
@@ -8,31 +8,34 @@
 <body>
 <div class="container">
 
-  <h1> Employee Info  </h1>
+    <div class="text-center">
+        <h1>{{employee.get_full_name}}:</h1>
+      </div>
+      
 
     <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">{{employee.get_full_name}}</h5>
-    <p class="card-text"> Email {{employee.email}}</p>
-        <p class="card-text"> Salary {{employee.salary}}</p>
-        <p class="card-text"> Hire_date {{employee.hire_date}}</p>
+    <p class="card-text"> Email: {{employee.email}}</p>
+        <p class="card-text"> Salary: {{employee.salary}}</p>
+        <p class="card-text"> Department: {{employee.dept}}</p>
+        <p class="card-text"> Hire_date: {{employee.hire_date}}</p>
 
     <a href="{% url 'list_employees' %}" class="btn btn-primary">Back to all Employees </a>
   </div>
 
 
 
-    <!-- </div>
+    </div>
 
         <h1> See also colleagues in your department </h1>
 
-        {{employee.dept.dept_employee.all}}
         {% for emp in employee.dept.dept_employee.all %}
-        {% if emp.id != employee.id %}
-        <li><a href="{{emp.show_employee_url}}"> {{emp.name}} </a> </li>
-        {% endif %}
+            {% if emp.id != employee.id%}
+                <li> <a href="{{emp.show_employee_url}}"> {{emp}} </a></li>
+            {% endif %}
         {% endfor %}
-    </div> -->
+    </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
